# ev-bike

./: .gitignore  README.md
APC/: .gdbinit  .gitignore  Cargo.toml  README.md  build.sh  deploy.sh  memory.x
APC/.cargo/: config
APC/auxiliary/: Cargo.toml
APC/auxiliary/src/: lib.rs
APC/schematics/Protoboard v0.1/: notes.txt
APC/scripts/: deploy.sh
APC/src/: logic.rs  main.rs  time.rs
DIS/: README.md  deploy.sh
DIS/data/: default.frag  default.vert
DIS/firmware/: Cargo.toml  build.sh  deploy.sh
DIS/firmware/.cargo/: config
DIS/firmware/src/: main.rs  vehicle.rs
DIS/firmware/src/ebola/: lib.rs  renderer.rs  texture.rs
