[package]
authors = ["Martin Zielinski <darthcoder1@gmail.com>"]
name = "APC"
version = "0.1.0"

[dependencies]
cortex-m = "0.5.0"
cortex-m-rt = "0.5.0"
cortex-m-semihosting = "0.3.0"
panic-semihosting = "0.3.0"
stm32f103xx = "0.10.0"

[dependencies.stm32f103xx-hal]
git = "https://github.com/japaric/stm32f103xx-hal.git"
features = ["rt"]
version = "*"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.1"

# Uncomment for the panic example.
# panic-itm = "0.1.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.4"

# Uncomment for the device example.
# [dependencies.stm32f103xx]
# features = ["rt"]
# version = "0.10.0"

[profile.release]
codegen-units = 1 # better optimizations
debug = true
lto = true # better optimizations
