[package]
authors = ["Martin Zielinski <darthcoder1@gmail.com>"]
name = "APC"
version = "0.1.0"

[dependencies]
cortex-m = "0.5.3"
cortex-m-rt = "=0.5.1"
cortex-m-semihosting = "0.3.0"

[dependencies.stm32f103xx-hal]
git = "https://github.com/japaric/stm32f103xx-hal.git"
features = ["rt"]
version = "*"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.4"

[profile.release]
codegen-units = 1 # better optimizations
debug = true
lto = true # better optimizations
